realize html links and factor type of zvit

--- a/Lab_1/zvit.html
+++ b/Lab_1/zvit.html
@@ -10,5 +10,22 @@
     <h1>
         Лаболаорная Работа №1
     </h1>
+    <a style="text-align:center" href="../index.html   ">back</a>
+    <hr>
+    <h2>
+        Завдання
+    </h2>
+    <img src="Screenshot1.png">
+    <hr>
+    <h2>
+        Програмний код
+    </h2>
+    <img src="Screenshot2.png">
+    <hr>
+    <h2>
+        Відпоідь    
+    </h2>
+    21.807997
+    <hr>
 </body>
 </html>
