make lab4A - add zvit lab4A - correct enouther zvit

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <br>
     <a style="text-align:center" href="../функциоанальное-програмирования/Lab_3/zvit.html">lab 3</a>
     <br>
+    <a style="text-align:center" href="../функциоанальное-програмирования/Lab_4A/zvit.html">lab 4A</a>
+    <br>
     <a style="text-align:center" href="../функциоанальное-програмирования/Lab_4/zvit.html">lab 4</a>
     <br>
     <a style="text-align:center" href="../функциоанальное-програмирования/Lab_5/zvit.html">lab 5</a>
