--- a/Lab_4A/zvit.html
+++ b/Lab_4A/zvit.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>
-        Лаболаорная Работа №2
+        Лаболаорная Работа №4A
     </h1>
     <a style="text-align:center" href="../index.html   ">back</a>
     <hr>
@@ -25,7 +25,7 @@
     <h2>
         Відпоідь    
     </h2>
-    7
+        <img src="Screenshot3.png">
     <hr>
 </body>
 </html>
